<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:background="#B7B7B7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ABDAFA"
            android:fontFamily="@font/roboto_medium_italic"
            android:paddingVertical="4dp"
            android:text="@string/meal_of_the_day"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvMealName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/koshari"
            android:textColor="@color/card_text_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/egypt"
            android:textColor="@color/card_text_color"
            android:textSize="20sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivMealImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/login_background"
            app:shapeAppearanceOverlay="@style/meal_of_the_day" />

    </LinearLayout>

</androidx.cardview.widget.CardView>