<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <View
        android:id="@+id/blackOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="8dp"
        tools:context=".login.view.Login">

        <!--Navigate to Login Screen-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:fontFamily="@font/roboto_italic"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#ffffff"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login"
            android:textColor="@color/btn_txt_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/btn_ripple_color" />
        <!--Navigate to Register Screen-->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="60dp"
            android:backgroundTint="#ffffff"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/register"
            android:textColor="@color/btn_txt_color"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/btn_ripple_color" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>
